@@ -1,3 +1,12 @@
+Thu Aug 14 01:41:47 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimInputDialog.cpp:
+	* src/QGaimInputDialog.h:
+	* src/QGaimRequest.cpp:
+	* src/QGaimRequest.h:
+	* gaim.pro:
+	  - Added QGaimInputDialog, and fixed the gaim_request_input UI.
+
 Thu Aug 14 01:38:45 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimAccountsWindow.cpp:
